# python-elastic

./: .gitignore  es.py  main.py  move_data_from_gbq.py  pyproject.toml  readme.md
es/: __init__.py  cluster.py  data_stream.py  document.py  es_api.py  index.py  search.py  utils.py
utils/: __init__.py  get_logger.py  read_config.py
