[tool.poetry]
name = "python-elastic"
version = "0.8.0"
description = "Python package to interact with elasticsearch"
authors = ["patrick <chodowski.patrick@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
PyYAML = "^5.4.1"
requests = "^2.26.0"
pandas = "^1.3.1"

[tool.poetry.dev-dependencies]
elasticsearch = "^7.14.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
